--- a/public/index.html
+++ b/public/index.html
@@ -606,8 +606,10 @@
       <section class="section section-small animate">
         <div class="section__info">
           <div class="section__head">
-            <h2 class="section__title">Writing</h2>
+            <h2 class="section__title">Hedaya's Thoughts and Musings</h2>
           </div>
+          
+            <p class="section__description">My Thoughts and Musings</p>
           
         </div>
 
