refactor base URL

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,7 +73,7 @@ Email: [your-email@example.com] Phone: [your-phone-number] Office Hours: Monday 
       <div class="header__inner col col-12">
 
         <div class="logo">
-          <a class="logo__link" href="http://localhost:1313/">
+          <a class="logo__link" href="https://dayapetecopy.netlify.app/">
             
               DayaPete.com
             
@@ -296,8 +296,8 @@ Office Hours: Monday to Friday, 9 AM - 5 PM</p>
 
 
 
-<script src="http://localhost:1313/js/scripts.js"></script>
-<script src="http://localhost:1313/js/common.js"></script>
+<script src="/js/scripts.min.fec8b91a5559c0916e35e091775ada7e8a2f5461b313a24cfd0345f50dc77d08.js"></script>
+<script src="/js/common.min.5558779397ec3306a497714b58af97f12fe266842a031cc598bfaf75c3b5d82c.js"></script>
 
 
   </body>
