--- a/public/elements/index.html
+++ b/public/elements/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,13 +17,13 @@
   <meta name="twitter:title" content="Elements | DayaPete.com">
   <meta name="twitter:description" content="A paragraph looks like this — Globally incubate standards compliant channels before scalable benefits. Quickly disseminate superior deliverables whereas web-enabled applications. Quickly drive clicks-and-mortar catalysts for change before vertical architectures. Credibly reintermediate backend ideas for cross-platform models. Continually reintermediate integrated processes through technically sound intellectual capital. Holistically foster superior methodologies.
 Headings by default: H1 Default styles for headings H2 Default styles for headings H3 Default styles for headings H4 Default styles for headings H5 Default styles for headings H6 Default styles for headings Lists Ordered list example: Poutine drinking vinegar bitters.">
-  <meta name="twitter:image" content="http://localhost:1313/">
+  <meta name="twitter:image" content="https://dayapetecopy.netlify.app/">
 
   
   <meta property="og:title" content="Elements | DayaPete.com">
   <meta property="og:description" content="A paragraph looks like this — Globally incubate standards compliant channels before scalable benefits. Quickly disseminate superior deliverables whereas web-enabled applications. Quickly drive clicks-and-mortar catalysts for change before vertical architectures. Credibly reintermediate backend ideas for cross-platform models. Continually reintermediate integrated processes through technically sound intellectual capital. Holistically foster superior methodologies.
 Headings by default: H1 Default styles for headings H2 Default styles for headings H3 Default styles for headings H4 Default styles for headings H5 Default styles for headings H6 Default styles for headings Lists Ordered list example: Poutine drinking vinegar bitters.">
-  <meta property="og:image" content="http://localhost:1313/">
+  <meta property="og:image" content="https://dayapetecopy.netlify.app/">
 
   
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -69,7 +69,7 @@ Headings by default: H1 Default styles for headings H2 Default styles for headin
       <div class="header__inner col col-12">
 
         <div class="logo">
-          <a class="logo__link" href="http://localhost:1313/">
+          <a class="logo__link" href="https://dayapetecopy.netlify.app/">
             
               DayaPete.com
             
@@ -358,8 +358,8 @@ Headings by default: H1 Default styles for headings H2 Default styles for headin
 
 
 
-<script src="http://localhost:1313/js/scripts.js"></script>
-<script src="http://localhost:1313/js/common.js"></script>
+<script src="/js/scripts.min.fec8b91a5559c0916e35e091775ada7e8a2f5461b313a24cfd0345f50dc77d08.js"></script>
+<script src="/js/common.min.5558779397ec3306a497714b58af97f12fe266842a031cc598bfaf75c3b5d82c.js"></script>
 
 
   </body>
