--- a/public/works/index.html
+++ b/public/works/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,19 +10,19 @@
   <title>My Works | DayaPete.com</title>
   <meta name="description" content="At DayaPeteCopy, we pride ourselves on delivering exceptional copywriting and digital marketing solutions that drive results. Explore our portfolio to see how we’ve helped businesses like yours achieve their goals and thrive in their industries.">
 
-  <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/works/index.xml" title="DayaPete.com">
+  <link rel="alternate" type="application/rss+xml" href="https://dayapetecopy.netlify.app/works/index.xml" title="DayaPete.com">
   
 
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="My Works | DayaPete.com">
   <meta name="twitter:description" content="At DayaPeteCopy, we pride ourselves on delivering exceptional copywriting and digital marketing solutions that drive results. Explore our portfolio to see how we’ve helped businesses like yours achieve their goals and thrive in their industries.">
-  <meta name="twitter:image" content="http://localhost:1313/">
+  <meta name="twitter:image" content="https://dayapetecopy.netlify.app/">
 
   
   <meta property="og:title" content="My Works | DayaPete.com">
   <meta property="og:description" content="At DayaPeteCopy, we pride ourselves on delivering exceptional copywriting and digital marketing solutions that drive results. Explore our portfolio to see how we’ve helped businesses like yours achieve their goals and thrive in their industries.">
-  <meta property="og:image" content="http://localhost:1313/">
+  <meta property="og:image" content="https://dayapetecopy.netlify.app/">
 
   
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -68,7 +68,7 @@
       <div class="header__inner col col-12">
 
         <div class="logo">
-          <a class="logo__link" href="http://localhost:1313/">
+          <a class="logo__link" href="https://dayapetecopy.netlify.app/">
             
               DayaPete.com
             
@@ -354,8 +354,8 @@
 
 
 
-<script src="http://localhost:1313/js/scripts.js"></script>
-<script src="http://localhost:1313/js/common.js"></script>
+<script src="/js/scripts.min.fec8b91a5559c0916e35e091775ada7e8a2f5461b313a24cfd0345f50dc77d08.js"></script>
+<script src="/js/common.min.5558779397ec3306a497714b58af97f12fe266842a031cc598bfaf75c3b5d82c.js"></script>
 
 
   </body>
