--- a/public/404.html
+++ b/public/404.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/DPC.ico">
 
-  <title>404 Page not found | DayaPete.com</title>
+  <title>404 Page not found | DayaPeteCopy.com</title>
   <meta name="description" content="">
 
   
 
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="404 Page not found | DayaPete.com">
+  <meta name="twitter:title" content="404 Page not found | DayaPeteCopy.com">
   <meta name="twitter:description" content="Creative Portfolio For Hedaya P.">
-  <meta name="twitter:image" content="https://dayapetecopy.netlify.app/">
+  <meta name="twitter:image" content="http://localhost:1313/">
 
   
-  <meta property="og:title" content="404 Page not found | DayaPete.com">
+  <meta property="og:title" content="404 Page not found | DayaPeteCopy.com">
   <meta property="og:description" content="Creative Portfolio For Hedaya P.">
-  <meta property="og:image" content="https://dayapetecopy.netlify.app/">
+  <meta property="og:image" content="http://localhost:1313/">
 
   
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -67,9 +67,9 @@
       <div class="header__inner col col-12">
 
         <div class="logo">
-          <a class="logo__link" href="https://dayapetecopy.netlify.app/">
+          <a class="logo__link" href="http://localhost:1313/">
             
-              DayaPete.com
+              DayaPeteCopy.com
             
           </a>
         </div>
@@ -238,7 +238,7 @@
   <div class="container">
     <div class="row">
       <div class="col col-12">
-        <div class="copyright">2024 &copy; <a href="/">DayaPete.com</a>. All Rights Reserved. Published with <a href="https://gohugo.io/">Hugo</a> and <a href="https://hmsdev.co" target="_blank" rel="noopener noreferrer">HMSDev</a>.</div>
+        <div class="copyright">2024 &copy; <a href="/">DayaPeteCopy.com</a>. All Rights Reserved. Published with <a href="https://gohugo.io/">Hugo</a> and <a href="https://hmsdev.co" target="_blank" rel="noopener noreferrer">HMSDev</a>.</div>
       </div>
     </div>
   </div>
@@ -250,8 +250,8 @@
 
 
 
-<script src="/js/scripts.min.fec8b91a5559c0916e35e091775ada7e8a2f5461b313a24cfd0345f50dc77d08.js"></script>
-<script src="/js/common.min.5558779397ec3306a497714b58af97f12fe266842a031cc598bfaf75c3b5d82c.js"></script>
+<script src="http://localhost:1313/js/scripts.js"></script>
+<script src="http://localhost:1313/js/common.js"></script>
 
 
   </body>
