--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/DPC.ico">
 
-  <title>Get in Touch with Me ! | DayaPete.com</title>
+  <title>Get in Touch with Me ! | DayaPeteCopy.com</title>
   <meta name="description" content="">
 
   
 
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Get in Touch with Me ! | DayaPete.com">
+  <meta name="twitter:title" content="Get in Touch with Me ! | DayaPeteCopy.com">
   <meta name="twitter:description" content="At DayaPeteCopy, we pride ourselves on being modern, friendly, compassionate, sisterly, professional, dependable, and honest. We’re here to help small and medium-sized businesses elevate their copywriting and digital marketing strategies.
 Whether you have a question, need a quote, or are ready to start a project, we’re excited to hear from you! Our team is dedicated to providing you with the best service and support.
 Contact Information:
@@ -22,7 +22,7 @@ Email: [your-email@example.com] Phone: [your-phone-number] Office Hours: Monday 
   <meta name="twitter:image" content="https://via.placeholder.com/1200x800">
 
   
-  <meta property="og:title" content="Get in Touch with Me ! | DayaPete.com">
+  <meta property="og:title" content="Get in Touch with Me ! | DayaPeteCopy.com">
   <meta property="og:description" content="At DayaPeteCopy, we pride ourselves on being modern, friendly, compassionate, sisterly, professional, dependable, and honest. We’re here to help small and medium-sized businesses elevate their copywriting and digital marketing strategies.
 Whether you have a question, need a quote, or are ready to start a project, we’re excited to hear from you! Our team is dedicated to providing you with the best service and support.
 Contact Information:
@@ -73,9 +73,9 @@ Email: [your-email@example.com] Phone: [your-phone-number] Office Hours: Monday 
       <div class="header__inner col col-12">
 
         <div class="logo">
-          <a class="logo__link" href="https://dayapetecopy.netlify.app/">
+          <a class="logo__link" href="http://localhost:1313/">
             
-              DayaPete.com
+              DayaPeteCopy.com
             
           </a>
         </div>
@@ -284,7 +284,7 @@ Office Hours: Monday to Friday, 9 AM - 5 PM</p>
   <div class="container">
     <div class="row">
       <div class="col col-12">
-        <div class="copyright">2024 &copy; <a href="/">DayaPete.com</a>. All Rights Reserved. Published with <a href="https://gohugo.io/">Hugo</a> and <a href="https://hmsdev.co" target="_blank" rel="noopener noreferrer">HMSDev</a>.</div>
+        <div class="copyright">2024 &copy; <a href="/">DayaPeteCopy.com</a>. All Rights Reserved. Published with <a href="https://gohugo.io/">Hugo</a> and <a href="https://hmsdev.co" target="_blank" rel="noopener noreferrer">HMSDev</a>.</div>
       </div>
     </div>
   </div>
@@ -296,8 +296,8 @@ Office Hours: Monday to Friday, 9 AM - 5 PM</p>
 
 
 
-<script src="/js/scripts.min.fec8b91a5559c0916e35e091775ada7e8a2f5461b313a24cfd0345f50dc77d08.js"></script>
-<script src="/js/common.min.5558779397ec3306a497714b58af97f12fe266842a031cc598bfaf75c3b5d82c.js"></script>
+<script src="http://localhost:1313/js/scripts.js"></script>
+<script src="http://localhost:1313/js/common.js"></script>
 
 
   </body>
